Update manifest and options page descriptions for clarity and focus on core features

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Golf Course Search Extension",
   "version": "1.0.0",
-  "description": "楽天GORAのゴルフ場を難易度、コースレート、スロープレート、Redティー総飛距離で検索できる拡張機能",
+  "description": "楽天GORAのゴルフ場を検索できる拡張機能",
   "permissions": [
     "activeTab",
     "storage",
